# FIMS-software

./: .gitignore  README.Rmd  README.md  compile_results.R
.github/workflows/: catch.yml  googletest.yml
ModularTMBExamples/ar1xar1/: Common.hpp  ar1xar1.R  ar1xar1.cpp  model.hpp  testAR1xAR1.R  tmbutils_extra.hpp
ModularTMBExamples/logisticGrowth/: Common.hpp  DerivedQuantities.hpp  likelihoods.hpp  logisticGrowth.cpp  model.hpp  modular_demo.R
R/: compile_results.R  model_setup.R  modular_demo.R  run_benchmark.R  run_benchmark_shiny.R  run_benchmark_sp.R  run_profiler.R  utils.R
R/ProfileScripts/: gompertz_julia.jl  logistic_admb_nonsep.R  logistic_admb_re.R  logistic_julia.jl  logistic_stan.R  logistic_tmb.R  logistic_tmb_MLE.R  logistic_tmb_re.R  logistic_tmbstan.R  spatial_admb_re.R
R/benchmark/: app.R  model_setup.R  run_benchmark_shiny.R
data/: gompertz.csv  gompertzInits.RData  simdata.R  simdata_logistic.R  tuna.R
data/gompertz/: gompertzInits_n1024.RData  gompertzInits_n128.RData  gompertzInits_n2048.RData  gompertzInits_n256.RData  gompertzInits_n32.RData  gompertzInits_n512.RData  gompertzInits_n64.RData  gompertz_n1024.csv  gompertz_n128.csv  gompertz_n2048.csv  gompertz_n256.csv  gompertz_n32.csv  gompertz_n512.csv  gompertz_n64.csv
data/logistic/: logisticInits_n100.RData  logisticInits_n1024.RData  logisticInits_n128.RData  logisticInits_n2048.RData  (+12 more)
docs/: FIMS architecture exploratory analysis.Rmd  FIMS software exploratory analysis.Rmd  FIMS-architecture-exploratory-analysis.html  FIMS-software-exploratory-analysis.html  Working Doc.Rmd  Working-Doc.html  ar1xar1.Rmd  ar1xar1.html  logisticGrowth.Rmd  logisticGrowth.html
results/: gompertz.RData  gompertz.RDsts  logistic.RData
src/tests/catch/: CMakeLists.txt  catch-likelihoods.cpp  catch-model.cpp
src/tests/googletest/: CMakeLists.txt  googletest-likelihoods.cpp  googletest-model.cpp
tests/: test-Rcpp-functional.R  test-Rcpp-likelihoods-unit.cpp  test-Rcpp-model-unit.cpp  test-TMBstateSpace-functional.R  test-logisticGrowth-functional.R  test-rcppFuns-functional.R
(+64 files in other folders)
